--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch app.cjs",
     "eslint": "npx eslint",
     "prettywrite": "npx prettier --write .",
     "prettycheck": "npx prettier --check .",
@@ -25,5 +25,9 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^9.1.7",
     "prettier": "3.5.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   }
 }
